--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -12,7 +10,7 @@
     <p><a href="/register">Registrar</a> ou <a href="/login">Login</a></p>
 
     
-    <a href="/annotations">
+    <a href="/create">
         <button>Ver Anotações</button>
     </a>
 </body>
